--- a/web/sass/component/login.scss
+++ b/web/sass/component/login.scss
@@ -171,7 +171,7 @@
 			@include dib();
 			border-radius: 5px;
 			&.qq-login{
-				background: #fff url(../img/home/qqunact.png) no-repeat 38px 11px;
+				background: #fff url(../img/home/qqUnact.png) no-repeat 38px 11px;
 				&:hover{
 					background: #fff url(../img/home/qq.png) no-repeat 38px 11px;
 					color: #6f93da;
