--- a/src/Wenwen/FrontendBundle/Resources/views/headerUser.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/headerUser.html.twig
@@ -1,21 +1,21 @@
 <div id="top-header" class="header">
     <div class="header-top">
         <div class="header-top-con w1000 clearfix">
-            <div class="left"><a href="../about/map.html" title="网站地图" class="first">网站地图</a><a href="../help/help.html" title="帮助中心" class="last">帮助中心</a></div>
+            <div class="left"><a href="{{ path('wenwen_frontend_about_map') }}" title="网站地图" class="first">网站地图</a><a href="{{ path('wenwen_frontend_help_index') }}" title="帮助中心" class="last">帮助中心</a></div>
             <ul class="right clearfix">
-                <li><em class="guide"></em><a href="../help/help.html" title="新手上路">新手上路</a></li>
-                <li><em class="tool"></em><a href="../gadget/gadget.html" title="调查工具">调查工具</a></li>
-                <li><a href="../personal/message.html" class="last"><em class="mail"><div class="mark"></div></em></a><span class="special expand-btn"><div class="expand-title"><label for="personal_links">个人中心</label><b></b></div><div id="personal_links" class="personal expand-con">
+                <li><em class="guide"></em><a href="{{ path('wenwen_frontend_help_guide') }}" title="新手上路">新手上路</a></li>
+                <li><em class="tool"></em><a href="{{ path('wenwen_frontend_gadget_index') }}" title="调查工具">调查工具</a></li>
+                <li><a href="{{ path('wenwen_frontend_personal_message') }}" class="last"><em class="mail"><div class="mark"></div></em></a><span class="special expand-btn"><div class="expand-title"><label for="personal_links">个人中心</label><b></b></div><div id="personal_links" class="personal expand-con">
                 <div class="personal-con">
                     <span><img src="{{ asset('img/common/default_tx.png') }}" alt="头像"></span>
                     <span class="txt"><div class="nickname">wenwen_sina</div><div><label for="points">积分：</label><strong id="points" name="points">2542</strong></div></span>
                 </div>
                 <ul>
-                    <li><a href="../personal/profile.html">个人资料</a></li>
-                    <li><a href="../personal/account.html">账户设置</a></li>
-                    <li><a href="../personal/taskHistory.html">任务历史</a></li>
-                    <li><a href="../personal/exchangeHistory.html">兑换历史</a></li>
-                    <li><a href="../home/index.html" class="exit">退出</a></li>
+                    <li><a href="{{ path('wenwen_frontend_personal_profile') }}">个人资料</a></li>
+                    <li><a href="{{ path('wenwen_frontend_personal_account') }}">账户设置</a></li>
+                    <li><a href="{{ path('wenwen_frontend_personal_task') }}">任务历史</a></li>
+                    <li><a href="{{ path('wenwen_frontend_personal_exchange') }}">兑换历史</a></li>
+                    <li><a href="{{ path('wenwen_frontend_home_index') }}" class="exit">退出</a></li>
                 </ul></div></span></li>
             </ul>
         </div>
