公共文件名称修改

--- a/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
@@ -9,13 +9,13 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
 <div class="main">
 	<div class="main-about-con w1000 clearfix">
-		{% include 'WenwenFrontendBundle:About:leftSidebar.html.twig' %}
+		{% include 'WenwenFrontendBundle:About:_leftSidebar.html.twig' %}
 		<div class="aboutR tabCon right">
 			<h2>会员协议</h2>
 			<ul class="rules w732 con">
@@ -196,5 +196,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle::footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
