--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
@@ -41,4 +41,4 @@
     </div>
     <div class="footer-con-right right"><img src="{{ asset('img/common/qrcode.jpg') }}" alt="二维码"></div>
 </div>
-{% include 'WenwenFrontendBundle::footerCopyright.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
