--- a/src/Wenwen/FrontendBundle/Resources/views/Callboard/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Callboard/index.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle::footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
