--- a/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/finished.html.twig
@@ -9,12 +9,12 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
 <div class="main">
-	{% include 'WenwenFrontendBundle:Help:banner.html.twig' %}
+	{% include 'WenwenFrontendBundle:Help:_banner.html.twig' %}
 	<div class="main-help-con w1000">
 		<div class="main-help-feedback">
 			<div class="finished">
@@ -28,5 +28,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle::footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
