--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
@@ -9,12 +9,12 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
 {% endblock %}
 
 {% block body %}
 <div class="main">
-	{% include 'WenwenFrontendBundle:Help:banner.html.twig' %}
+	{% include 'WenwenFrontendBundle:Help:_banner.html.twig' %}
 	<div class="main-help-con w1000">
 	    <div class="newGuide">
 	        <div class="newGuideDetail" id="survey">
@@ -109,5 +109,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle::footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
 {% endblock %}
