--- a/src/Wenwen/FrontendBundle/Resources/views/Test/indexSimple.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Test/indexSimple.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::headerSimple.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
 {% endblock %}
 
 {% block body %}
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle::footerCopyright.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
 {% endblock %}
