--- a/src/Wenwen/FrontendBundle/Resources/views/Test/indexSimpleQ.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Test/indexSimpleQ.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle::headerSimpleQ.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimpleQ.html.twig' %} 
 {% endblock %}
 
 {% block body %}
