--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/alipayConfirm.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/alipayConfirm.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/exchangeFlow.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -14,12 +14,27 @@
 
 {% block body %}
 <div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
-	</div>
+	<div class="main-con w1000">
+			<div class="main-con-exchange form">
+				<h1>支付宝现金兑换</h1>
+				<div class="main-con-exchangeInfo">
+					<p class="alipay-tips"><em>●</em>您是第一次兑换米粒，我们需要记录并保存您的身份证号码。<br><em>●</em>请您务必认真填写,该号码将在您兑换成功后自动绑定。</p>
+					<form action="/exchange/mobileInfo" method="post" name="mobileInfo" id="form1">
+					<ul>
+						<li>
+							<label for="idCard">您的身份证号：</label>
+							<input type="text" id="idCard">
+							<span id="idCard_succeed"></span>
+							<span id="idCard_error"></span>
+						</li>
+					</ul>
+					<div class="btn spec"><!-- <a href="alipayInfo.html"> --><span id="alipay_save">下一步</span><!-- </a> --></div>
+	        	</form>
+	        	</div>
+			</div>
+		</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/exchange/alipayConfirm')}}"></script>
 {% endblock %}
 
 {% block footer %}
