--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
@@ -2,7 +2,7 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/exchange.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -14,9 +14,72 @@
 
 {% block body %}
 <div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+	<div class="main-con w1000">
+		<div class="main-con-exchange">
+			<form method="post" name="exchangeForm" id="exchangeForm">
+		        <ul class="clearfix">
+		            <li>
+		                <div class="clearfix">
+		                    <div class="pic">
+		                        <img src="{{ asset('img/exchange/mobile.png') }}" alt="示意图"/>
+		                    </div>
+		                    <dl>
+		                        <dt>手机充值</dt>
+		                        <dd class="text">用积分为手机充值，<strong>2010米粒</strong>起兑</dd>
+		                        <dd class="exchangeBtn">
+		                            <a href="{{ path('wenwen_frontend_exchange_mobileinfo') }}" id="mobileBtn">立即兑换</a>
+		                        </dd>
+		                    </dl>
+		                </div>
+		            </li>
+		            <li>
+		                <div class="clearfix">
+		                    <div class="pic">
+		                        <img src="{{ asset('img/exchange/amazon.png') }}" alt="示意图"/>
+		                    </div>
+		                    <dl>
+		                        <dt>亚马逊礼品卡兑换</dt>
+		                        <dd class="text">用积分兑换亚马逊礼品卡，<strong>2000米粒</strong>起兑</dd>
+		                        <dd class="exchangeBtn">
+		                        	<a href="javascript:void(0)" id="amazonBtn" class="disabled">立即兑换</a>
+		                        </dd>
+		                    </dl>
+		                </div>
+		            </li>
+		            <li>
+		                <div class="clearfix">
+		                    <div class="pic">
+		                        <img src="{{ asset('img/exchange/alipay.png') }}" alt="示意图"/>
+		                    </div>
+		                    <dl>
+		                        <dt>支付宝现金兑换</dt>
+		                        <dd class="text">用积分兑换支付宝现金，<strong>2050米粒</strong>起兑</dd>
+		                        <dd class="exchangeBtn">
+		                            <a href="{{ path('wenwen_frontend_exchange_alipayinfo') }}" id="alipayBtn">立即兑换</a>
+		                        </dd>
+		                    </dl>
+		                </div>
+		            </li>
+		            <li>
+		                <div class="clearfix">
+		                    <div class="pic">
+		                        <img src="{{ asset('img/exchange/flow.png') }}" alt="示意图"/>
+		                    </div>
+		                    <dl>
+		                        <dt>上网流量包兑换</dt>
+		                        <dd class="text">用积分兑换上网流量包，电信、联通<strong>1590米粒</strong>起兑，移动<strong>1660米粒</strong>起兑</dd>
+		                        <dd class="exchangeBtn">
+		                            <a href="{{ path('wenwen_frontend_exchange_flowinfo') }}" id="flowBtn">立即兑换</a>
+		                        </dd>
+		                    </dl>
+		                    <span class="newIcon"></span>
+		                </div>
+		            </li>
+		        </ul>
+		        <input type="hidden" value="btn" name="btn">
+		        <input type="hidden" value="35d7b9362ee0d9ad0093b5653688618229cbb14a" name="tokenKey" />
+	        </form>
+		</div>
 	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
