--- a/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/active.html.twig
@@ -2,26 +2,42 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/register.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+<div class="main w1000">
+	<div class="main-register-active">
+		<div class="con">
+			<div class="text">
+				<div class="title">就差一步了，快去激活您的账户吧！</div>
+				<p>我们已经向您的邮箱zeebee@hotmail.com发送了一封激活邮件，请点击邮件中的链接完成注册。</p>
+				<a href="">立即进入邮箱</a>
+			</div>
+		</div>
+		<div class="tips">
+			<dl>
+				<dt>注册成功后，您可以享受：</dt>
+				<dd>回答问卷赚积分，快速问答投票，做任务赢取奖励，参加活动，邀请好友...</dd>
+			</dl>
+			<dl>
+				<dt>还未收到确认邮件，您可以：</dt>
+				<dd>1.查看您的垃圾邮件箱，并将support@91wenwen.com加为您的联系人。</dd>
+				<dd>2.如果还是没有收到，请点击这里联系客服人员。</dd>
+			</dl>
+		</div>
 	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
 {% endblock %}
