--- a/src/Wenwen/FrontendBundle/Resources/views/User/finished.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/finished.html.twig
@@ -2,26 +2,35 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/register.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+<div class="main w1000">
+	<div class="main-register-active">
+		<div class="con finish">
+			<div class="text">
+				<div class="title">恭喜！您已成功激活了您的账户，并获得了<b>10</b>积分！</div>
+			</div>
+		</div>
+		<div class="tips">
+			<dl>
+				<dt>回答完属性问卷，将会帮助您收到更多的高积分问卷哦！</dt>
+				<dd><b>10s</b>后将为您自动跳转……</dd>
+			</dl>
+		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/finish')}}"></script>
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
 {% endblock %}
