--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwdEmail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwdEmail.html.twig
@@ -2,26 +2,35 @@
 {% block title %}{{ parent()  }} Test {% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/home.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/resetPwd.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
 {% endblock %}
  
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %} 
 {% endblock %}
 
 {% block body %}
-<div class="main">
-	<div class="main-con w1000 clearfix">
-		<div class="main-con-left left"><div><h1>以首页做示例</h1>左侧</div></div>
-		<div class="main-con-right right"><div>右侧</div></div>
+<div class="main w1000">
+	<div class="form main-resetPwd">
+		<div class="step1">
+			<div class="steps"><span class="active">1 输入邮箱地址</span><span>2 重置密码</span><span class="last">3 完成</span></div>
+			<form action="">
+			<div class="main-resetPwd-con">
+				<div class="title">请输入您注册时填写的邮箱</div>
+				<div><input type="text" id="email" name="email"></div>
+				<div class="prompt"><span id="email_succeed"></span><span id="email_error"></span></div>
+				<a href="{{ path('wenwen_frontend_user_resetpwd') }}"><span class="btn" id="sendEmail">下一步</span></a>
+			</div>
+			</form>
+		</div>
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/header')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/user/resetPwd')}}"></script>
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
 {% endblock %}
